# ollama-email-classifier

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: README.md  dev.jsonl  synthesize.py  test.jsonl  train.jsonl
results/: README.md  classifier_gepa.json  eval_after_gepa.json  eval_baseline.json
src/: classifier.py  cli.py  eval.py  judge.py  optimize.py
tests/: test_classifier.py  test_cli.py  test_eval.py  test_integration_ollama.py  test_optimize.py  test_synthesize.py
