[project]
name = "ollama-email-classifier"
version = "0.1.0"
description = "Local-inference email classifier on Ollama with DSPy, GEPA optimization, and LLM-as-judge evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy-ai>=2.5.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5.0",
]

[project.scripts]
classify = "src.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
